// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/branch/lock-files/yarn catches errors 1`] = `
Array [
  Object {
    "cmd": "yarn --version",
    "options": Object {
      "cwd": null,
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "yarn install --ignore-scripts --ignore-engines --ignore-platform",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`workers/branch/lock-files/yarn docker using yarn v1.0.0 1`] = `
Array [
  Object {
    "cmd": "docker run --rm -v \\"some-dir\\":\\"some-dir\\" -v \\"dummy/dir\\":\\"dummy/dir\\" -e NPM_CONFIG_CACHE -e npm_config_store -w \\"some-dir\\" renovate/yarn yarn --version",
    "options": Object {
      "cwd": null,
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "docker run --rm -v \\"some-dir\\":\\"some-dir\\" -v \\"dummy/dir\\":\\"dummy/dir\\" -e NPM_CONFIG_CACHE -e npm_config_store -w \\"some-dir\\" renovate/yarn yarn install --ignore-scripts --ignore-engines --ignore-platform",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "docker run --rm -v \\"some-dir\\":\\"some-dir\\" -v \\"dummy/dir\\":\\"dummy/dir\\" -e NPM_CONFIG_CACHE -e npm_config_store -w \\"some-dir\\" renovate/yarn yarn upgrade some-dep --ignore-scripts --ignore-engines --ignore-platform",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`workers/branch/lock-files/yarn docker using yarn v2.0.0 1`] = `
Array [
  Object {
    "cmd": "docker run --rm -v \\"some-dir\\":\\"some-dir\\" -v \\"dummy/dir\\":\\"dummy/dir\\" -e NPM_CONFIG_CACHE -e npm_config_store -w \\"some-dir\\" renovate/yarn yarn --version",
    "options": Object {
      "cwd": null,
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "docker run --rm -v \\"some-dir\\":\\"some-dir\\" -v \\"dummy/dir\\":\\"dummy/dir\\" -e NPM_CONFIG_CACHE -e npm_config_store -w \\"some-dir\\" renovate/yarn yarn install --ignore-engines --ignore-platform",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
        "YARN_ENABLE_SCRIPTS": "0",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "docker run --rm -v \\"some-dir\\":\\"some-dir\\" -v \\"dummy/dir\\":\\"dummy/dir\\" -e NPM_CONFIG_CACHE -e npm_config_store -w \\"some-dir\\" renovate/yarn yarn upgrade some-dep --ignore-engines --ignore-platform",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`workers/branch/lock-files/yarn finds yarn v1.0.0 globally 1`] = `
Array [
  Object {
    "cmd": "yarn --version",
    "options": Object {
      "cwd": null,
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "yarn install --ignore-scripts --ignore-engines --ignore-platform",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`workers/branch/lock-files/yarn finds yarn v2.0.0 globally 1`] = `
Array [
  Object {
    "cmd": "yarn --version",
    "options": Object {
      "cwd": null,
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "yarn install --ignore-engines --ignore-platform",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
        "YARN_ENABLE_SCRIPTS": "0",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`workers/branch/lock-files/yarn generates lock files using yarn v1.0.0 1`] = `
Array [
  Object {
    "cmd": "yarn --version",
    "options": Object {
      "cwd": null,
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "yarn install --ignore-scripts --ignore-engines --ignore-platform",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "npx yarn-deduplicate@1.1.1 --strategy fewer && yarn",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "npx yarn-deduplicate@1.1.1 --strategy highest && yarn",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`workers/branch/lock-files/yarn generates lock files using yarn v2.0.0 1`] = `
Array [
  Object {
    "cmd": "yarn --version",
    "options": Object {
      "cwd": null,
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "yarn install --ignore-engines --ignore-platform",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
        "YARN_ENABLE_SCRIPTS": "0",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`workers/branch/lock-files/yarn performs lock file updates using yarn v1.0.0 1`] = `
Array [
  Object {
    "cmd": "yarn --version",
    "options": Object {
      "cwd": null,
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "yarn install --ignore-scripts --ignore-engines --ignore-platform",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "yarn upgrade some-dep --ignore-scripts --ignore-engines --ignore-platform",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`workers/branch/lock-files/yarn performs lock file updates using yarn v2.0.0 1`] = `
Array [
  Object {
    "cmd": "yarn --version",
    "options": Object {
      "cwd": null,
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "yarn install --ignore-engines --ignore-platform",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
        "YARN_ENABLE_SCRIPTS": "0",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "yarn upgrade some-dep --ignore-engines --ignore-platform",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;
